refactor: text translation

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <header>
 
-        <h2 class="logo">Logo</h2>
+        <h2 class="logo">FOREST</h2>
 
         <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="#">About me</a>
-            <a href="#">Service</a>
-            <a href="#">Contact</a>
-            <button class="btnLogin-popup">Login</button>
+            <a href="#">Главная</a>
+            <a href="#">О сайте</a>
+            <a href="#">Помощь</a>
+            <a href="#">Контакты</a>
+            <button class="btnLogin-popup">Войти</button>
         </nav>
 
     </header>
@@ -35,7 +35,7 @@
         
         <div class="form-box login">
 
-            <h2>Login</h2>
+            <h2>Вход</h2>
 
             <form action="#">
 
@@ -44,7 +44,7 @@
                         <ion-icon name="mail"></ion-icon>
                     </span>
                     <input type="email" required>
-                    <label>Email</label>
+                    <label>Почта</label>
                 </div>
 
                 <div class="input-box">
@@ -52,21 +52,21 @@
                         <ion-icon name="lock-closed"></ion-icon>
                     </span>
                     <input type="password" required>
-                    <label>Password</label>
+                    <label>Пароль</label>
                 </div>
 
                 <div class="remember-forgot">
                     <label>
-                        <input type="checkbox">Remember me
+                        <input type="checkbox">Запомнить меня
                     </label>
-                    <a href="#">Forgot Password?</a>
+                    <a href="#">Забыли пароль?</a>
                 </div>
 
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn">Войти</button>
 
                 <div class="login-register">
-                    <p>Don't have an account? 
-                        <a href="#" class="register-link">Register</a>
+                    <p>У вас нет аккаунта? 
+                        <a href="#" class="register-link">Запись</a>
                     </p>
                 </div>
 
@@ -77,7 +77,7 @@
         
         <div class="form-box register">
 
-            <h2>Registration</h2>
+            <h2>Регистрация</h2>
 
             <form action="#">
 
@@ -86,7 +86,7 @@
                         <ion-icon name="person"></ion-icon>
                     </span>
                     <input type="text" required>
-                    <label>Username</label>
+                    <label>Имя пользователя</label>
                 </div>
 
                 <div class="input-box">
@@ -94,7 +94,7 @@
                         <ion-icon name="mail"></ion-icon>
                     </span>
                     <input type="email" required>
-                    <label>Email</label>
+                    <label>Почта</label>
                 </div>
 
                 <div class="input-box">
@@ -102,20 +102,20 @@
                         <ion-icon name="lock-closed"></ion-icon>
                     </span>
                     <input type="password" required>
-                    <label>Password</label>
+                    <label>Пароль</label>
                 </div>
 
                 <div class="remember-forgot">
                     <label>
-                        <input type="checkbox">I agree to the terms & conditions
+                        <input type="checkbox">Я согласен с правилами и условиями
                     </label>
                 </div>
 
-                <button type="submit" class="btn">Register</button>
+                <button type="submit" class="btn">Запись</button>
 
                 <div class="login-register">
-                    <p>Already have an account? 
-                        <a href="#" class="login-link">Login</a>
+                    <p>У вас уже есть аккаунт? 
+                        <a href="#" class="login-link">Войти</a>
                     </p>
                 </div>
 
