--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="login-register">
                     <p>У вас нет аккаунта? 
-                        <a href="#" class="register-link">Запись</a>
+                        <a href="#" class="register-link">Создать аккаунт</a>
                     </p>
                 </div>
 
@@ -111,7 +111,7 @@
                     </label>
                 </div>
 
-                <button type="submit" class="btn">Запись</button>
+                <button type="submit" class="btn">Создать аккаунт</button>
 
                 <div class="login-register">
                     <p>У вас уже есть аккаунт? 
