--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Landscape</title>
+    <title>Лесной пейзаж</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,13 +15,20 @@
 
         <h2 class="logo">FOREST</h2>
 
-        <nav class="navigation">
-            <a href="#">Главная</a>
-            <a href="#">О сайте</a>
-            <a href="#">Помощь</a>
-            <a href="#">Контакты</a>
+        <div class="mainNavigation">
+
+            <ion-icon name="menu-outline" class="icon-menu"></ion-icon>
+
+            <nav class="navigation">
+                <a href="#">Главная</a>
+                <a href="#">О сайте</a>
+                <a href="#">Помощь</a>
+                <a href="#">Контакты</a>
+            </nav>
+
             <button class="btnLogin-popup">Войти</button>
-        </nav>
+            
+        </div>
 
     </header>
 
